[project]
name = "pulse-guard"
version = "0.1.0"
description = "Automated PR code quality review tool using LangChain and LLMs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "langgraph>=0.0.20",
    "pydantic>=2.4.2",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
